# pubmed-search

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  package-lock.json  package.json  playwright.config.ts
.claude/: launch.json
.github/workflows/: docker-publish.yml  pubmed-container-AutoDeployTrigger-7bf5e775-3f22-4038-a33f-f7bb9e76ead5.yml
backend/: Cargo.toml  rust-toolchain.toml
backend/src/: error.rs  lib.rs  main.rs  pubmed.rs  routes.rs  state.rs
backend/src/domain/: citation.rs  mod.rs
backend/src/http/: article.rs  cite.rs  export.rs  mesh.rs  mod.rs  search.rs
backend/src/http/dto/: cite.rs  error.rs  export.rs  mesh.rs  mod.rs  search.rs
backend/src/infra/: mod.rs
backend/src/infra/cache/: mod.rs
backend/src/infra/ncbi/: client.rs  efetch.rs  esearch.rs  esummary.rs  mod.rs  types.rs  xml.rs
backend/src/infra/ncbi/dto/: mod.rs
backend/src/infra/ncbi/dto/request/: common.rs  efetch.rs  esearch.rs  esummary.rs  mod.rs
backend/src/infra/ncbi/dto/response/: article.rs  esearch.rs  mod.rs  summary.rs
backend/src/infra/ncbi/types/: article.rs  esearch.rs  mod.rs
backend/tests/: BENCHMARK.md  api.rs  benchmark.rs  fixtures.rs  openapi.rs  parity.rs  probe.rs
docs/: DEPLOY.md  USER_MANUAL.md  data-flow.md  openapi.json  pubmedapi.md
e2e/: article.spec.ts  home.spec.ts  search.spec.ts
frontend/: .gitignore  .oxlintrc.json  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
frontend/e2e/: app-filter.spec.ts  home.spec.ts  (+3 more)
(+33 files in other folders)
